# django-qsessions

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
qsessions/: __init__.py
tests/: test_admin.py  test_middleware.py
